programming-language/workspace/compiler/tests/snapshots/snapshots_test__error_undefined_variable.snap
---
source: tests/snapshots_test.rs
expression: error
---
error[E200]: Undefined variable 'x'
  --> undefined_variable.cb64:3:5
  |
3 |     x = undefined_var
  |     ^^^^^^^^^^^^^^^^^
